# aigentik-android

./: .gitignore  CLAUDE.md  README.md  aigentik-android-review.md  aigentik-app-review.md  aigentik-gmail-review.md  code-audit-2026-03-10.md  code-audit.md  generate_icons.py  gmail-review-implementation-progress.md  gradle.properties  gradlew  review-implementation-progress.md  review-master-task-list.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/aigentik/app/adapters/: NotificationAdapter.kt  NotificationReplyRouter.kt  SmsAdapter.kt
app/src/main/java/com/aigentik/app/ai/: AiEngine.kt  LlamaJNI.kt
app/src/main/java/com/aigentik/app/auth/: AdminAuthManager.kt  DestructiveActionGuard.kt  GoogleAuthManager.kt
app/src/main/java/com/aigentik/app/chat/: ChatDao.kt  ChatDatabase.kt  ChatMessage.kt
app/src/main/java/com/aigentik/app/core/: AigentikPersona.kt  AigentikService.kt  AigentikSettings.kt  ChannelManager.kt  ChatBridge.kt  ContactDao.kt  ContactDatabase.kt  ContactEngine.kt  ContactEntity.kt  ConversationHistoryDao.kt  ConversationHistoryDatabase.kt  ConversationTurn.kt  Message.kt  MessageDeduplicator.kt  MessageEngine.kt  PhoneNormalizer.kt  RuleDao.kt  RuleDatabase.kt  RuleEngine.kt  RuleEntity.kt
app/src/main/java/com/aigentik/app/email/: EmailMonitor.kt  EmailRouter.kt  GmailApiClient.kt  GmailClient.kt  GmailHistoryClient.kt  GmailPushManager.kt
app/src/main/java/com/aigentik/app/sms/: SmsRouter.kt
app/src/main/java/com/aigentik/app/system/: BatteryOptimizationHelper.kt  BootReceiver.kt  ConnectionWatchdog.kt
app/src/main/java/com/aigentik/app/ui/: AiDiagnosticActivity.kt  ChatActivity.kt  MainActivity.kt  ModelManagerActivity.kt  OnboardingActivity.kt  RuleManagerActivity.kt  SettingsActivity.kt  SettingsHubActivity.kt  ThemeHelper.kt
app/src/main/res/drawable/: bubble_assistant.xml  bubble_user.xml  card_background.xml  input_background.xml
app/src/main/res/layout/: activity_ai_diagnostic.xml  activity_chat.xml  activity_main.xml  activity_model_manager.xml  activity_onboarding.xml  activity_rule_manager.xml  activity_settings.xml  activity_settings_hub.xml  item_message_assistant.xml  item_message_user.xml  item_settings_row.xml  nav_header.xml
app/src/main/res/menu/: drawer_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/: libs.versions.toml
